--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "psr/simple-cache": "~1.0"
     },
     "require-dev": {
-        "dazzlesoftware/dazzle-coding-standard": "^1.0",
-        "dazzlesoftware/test": "^1.0",
+        "dazzlesoftware/dazzle-coding-standard": "^1.0|^2.0",
+        "dazzlesoftware/test": "^1.0|^2.0",
         "phpunit/phpunit": "^9.0"
     },
     "suggest": {
@@ -39,7 +39,8 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-2.0-dev": "2.0-dev"
+            "dev-master": "1.x-dev",
+            "dev-develop": "2.x-dev"
         }
     }
 }
